--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -52,6 +52,7 @@ subdir('genesys')
 subdir('goodix-moc')
 subdir('gpio')
 subdir('hailuck')
+subdir('intel-gsc')
 subdir('intel-spi')
 subdir('intel-usb4')
 subdir('iommu')
